# ml-zero

./: .gitignore  CMakeLists.txt  README.md  build.sh
examples/: CMakeLists.txt
examples/basic_usage/: matrix_example.cpp  vector_example.cpp
include/mlzero/: mlzero.hpp
include/mlzero/core/: matrix.hpp  vector.hpp
src/core/: matrix.cpp  vector.cpp
tests/: CMakeLists.txt  test_main.cpp
tests/unit_tests/: test_matrix.cpp  test_vector.cpp
